@@ -1,3 +1,13 @@
+2008-05-15 16:01 +0200  Rocco Rutte  <pdmef@gmx.net>  (9a229c41e980)
+
+	* doc/manual.xml.head: Document exact address in the manual (closes
+	#3050)
+
+2008-05-14 16:23 -0700  Brendan Cully  <brendan@kublai.com>  (7f4711b9b61f)
+
+	* ChangeLog, alias.c: Ensure alias file ends with \n before appending
+	new aliases. Closes #1580.
+
 2008-05-14 15:19 +0200  Samuel Tardieu  <sam@rfc1149.net>  (5518355bc6da)
 
 	* curs_main.c: Always update status bar after sorting method changes
